Changed ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 Relationship Bulder/Temp/UnityLockfile
+Relationship Bulder/Library
+Relationship Bulder/Library
