Changed inore file 2

--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,5 @@ crashlytics-build.properties
 
 Relationship Bulder/Temp/UnityLockfile
 Relationship Bulder/Library
-Relationship Bulder/Library
+Relationship Bulder/Logs
+Relationship Bulder/Temp
